# grpc-proto

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  .gitmodules  .npmrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  package.json  pnpm-lock.yaml  repositories.bzl  tsconfig.json
cmd/client/: BUILD.bazel  client.go
cmd/client/http/: BUILD.bazel  http.go
cmd/client/rpc/: BUILD.bazel  rpc.go
cmd/server/: BUILD.bazel  server.go
pkg/server/: BUILD.bazel  server.go
proto/google/protobuf/: descriptor.proto
proto/greet/: BUILD.bazel  greet-Greet_connectquery.d.ts  greet.proto  greet_connect.d.ts  greet_pb.d.ts
proto/service/: BUILD  BUILD.bazel  greet.proto
src/: BUILD.bazel  client.ts  index.ts  server.ts  tsconfig.json
tools/: gopackagesdriver.sh
