workspace(name = "com_github_rmaxiqp_grpc_proto")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_proto defines abstract rules for building Protocol Buffers.
http_archive(
    name = "rules_proto",
    sha256 = "2490dca4f249b8a9a3ab07bd1ba6eca085aaf8e45a734af92aad0c42d9dc7aaf",
    strip_prefix = "rules_proto-218ffa7dfa5408492dc86c01ee637614f8695c45",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_proto/archive/218ffa7dfa5408492dc86c01ee637614f8695c45.tar.gz",
        "https://github.com/bazelbuild/rules_proto/archive/218ffa7dfa5408492dc86c01ee637614f8695c45.tar.gz",
    ],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()

http_archive(
    name = "com_google_googleapis",
    sha256 = "e8568a13080cfd5ca2d2f91dd0bcf4f11f9ba581b87ef2a01d0898f62c18683c",
    strip_prefix = "googleapis-6500290663163ba7dc6e0a35231772f5f78c3b62",
    urls = [
        "https://github.com/googleapis/googleapis/archive/6500290663163ba7dc6e0a35231772f5f78c3b62.zip",
    ]
)
load("@com_google_googleapis//:repositories.bzl", "switched_rules_by_language")
switched_rules_by_language(
    name = "com_google_googleapis_imports",
    go = True,
    grpc = True,
    java = True,
    nodejs = True,
    python = True,
)