load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "default_tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "ts_client",
    srcs = [
        "client.ts",
    ],
    tsconfig = "default_tsconfig",
    deps = [
        "//:node_modules",
        "//proto/greet:greet_ts_proto",
    ],
)

js_binary(
    name = "js_client",
    data = [
        ":ts_client",
    ],
    entry_point = "client.js",
)
