load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")


go_library(
    name = "cmd_lib",
    importpath = "github.com/rMaxiQp/grpc-proto/cmd/server",
    srcs = ["server.go"],
    deps = [
        "//pkg/server:server_lib",
    ]
)

go_binary(
    name = "server",
    embed = [":cmd_lib"],
)
