load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "greet_proto",
    srcs = ["greet.proto"],
    deps = [
        "@googleapis//google/api:annotations_proto"
    ],
)

go_proto_library(
    name = "greet_go_proto",
    protos = [":greet_proto"],
    importpath = "github.com/rMaxiQp/grpc-proto/greet",
    deps = [
        "@googleapis//google/api:annotations_go_proto",
    ]
)

go_grpc_library(
    name = "greet_go_grpc",
    protos = [":greet_proto"],
    importpath = "github.com/rMaxiQp/grpc-proto/greet",
    deps = [
        "@googleapis//google/api:annotations_go_proto",
    ]
)
