load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "greet_proto",
    srcs = ["greet.proto"],
    deps = [
        "@googleapis//google/api:annotations_proto",
    ],
)

# Using go_proto_library instead of go_grpc_library intentionally
# Until https://github.com/bazelbuild/bazel-gazelle/pull/1711 is resolved
go_proto_library(
    name = "greet_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rMaxiQp/grpc-proto/proto/greet",
    proto = ":greet_proto",
    deps = [
        "@googleapis//google/api:annotations_go_proto",
    ],
)
